--- a/code/demo.cabal
+++ b/code/demo.cabal
@@ -14,5 +14,7 @@ executable demo
                      , authenticate-oauth
                      , bytestring
                      , text
-      
+                     , mtl
+                     , blaze-html
+                     
   default-language:    Haskell2010
